--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,17 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap-icons": "^1.11.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
-    "bootstrap": "^5.2.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "bootstrap": "^5.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
