--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.8"
+    "mongoose": "^7.6.8",
+    "multer": "^1.4.5-lts.1"
   }
 }
