--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
     command: npm start
     ports: 
     - 80:80
+    depends_on:
+      - mongodb
+  mongodb:
+    image: mongo:latest
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: sugames
+      MONGO_INITDB_ROOT_PASSWORD: rC6k8zOV4u53
